<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iconBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/tvSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengaturan"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iconBack"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/19"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/iconBack"
                app:layout_constraintTop_toBottomOf="@id/tvSetting"/>

            <ImageView
                android:id="@+id/iconMenu"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/menu"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iconUpload"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/iconUpload"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/upload"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/second_gray"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/handphone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearImage"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengaturan"
                android:textAllCaps="false"
                app:strokeColor="@color/blue"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:strokeWidth="1dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <ImageView
                android:id="@+id/iconEyes"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/vision"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1004K"
                android:textColor="@color/gray"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/iconBack"
                app:layout_constraintTop_toBottomOf="@id/tvSetting"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subTitle"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/second_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/semi_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconLike"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/thumb_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Suka: 18K"
                android:textColor="@color/gray"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iconLike"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


</androidx.constraintlayout.widget.ConstraintLayout>