<?xml version="1.0" encoding="utf-8"?>

<!--Layout Keempat dari Contoh Model Layout Dua-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717">

    <!--Navigation Bar-->
    <ImageView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:background="#403333"
        app:srcCompat="@drawable/bg_multimedia_bar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <!--Return Icon-->
    <ImageView
        android:id="@+id/publisher_logo"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_bar"
        app:layout_constraintStart_toStartOf="@+id/navigation_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <!--Slide-->
    <TextView
        android:id="@+id/slide"
        android:layout_width="103dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="232dp"
        android:layout_marginTop="8dp"
        android:text="@string/navigasi_multimedia"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/publisher_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <!--Hamburger Icon-->
    <ImageView
        android:id="@+id/list_menu"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_list_menu"
        app:layout_constraintEnd_toStartOf="@+id/share_menu"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/slide"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Share Icon-->
    <ImageView
        android:id="@+id/share_menu"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_share_menu"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="@+id/navigation_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <!--Thumbnail-->
    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="#323433"
        android:scaleType="centerInside"
        android:src="@drawable/bg_thumbnail_multimedia"
        app:layout_constraintBottom_toBottomOf="@+id/headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_bar"
        app:layout_constraintVertical_bias="0.0" />

    <!--Headline-->
    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/judul_multimedia"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnail" />

    <!--Kamera-->
    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="#171717"
        android:text="Kamera"
        android:textAllCaps="false"
        android:textColor="#3B468A"
        android:textSize="10sp"
        android:textStyle="bold"
        app:cornerRadius="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#3B468A"
        app:strokeWidth="2sp" />

    <!--Views-->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/ic_views_total" />

    <!--Views Total-->

    <!--Cobalah Sekarang Button-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:text="1549K"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/button"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#5b81fe"
        android:text="Cobalah sekarang"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="164dp"
        android:text="@string/berita_multimedia"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <!--Footer Bar-->
    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/bg_multimedia_footer"
        tools:layout_editor_absoluteX="0dp" />

    <!--Likes Icon-->

    <!--Likes Total-->

    <ImageView
        android:id="@+id/likes"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="156dp"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintStart_toStartOf="@+id/footer"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.366"
        app:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/likes_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suka: 19K"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="@+id/footer"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.451" />

</androidx.constraintlayout.widget.ConstraintLayout>